# rdf2rss

./: .travis.yml  Makefile  README.md  dev-requirements.txt  pyproject.toml  rdf2rss.py  requirements.txt
.github/workflows/: test.yaml
src/rdf2rss/: __init__.py
